fixed laptop alignment

--- a/assets/scss/_laptop.scss
+++ b/assets/scss/_laptop.scss
@@ -14,8 +14,8 @@
 }
 
 .laptop {
+    	margin: 30px auto;
     * {
-    	margin: 0;
     	padding: 0;
     	border: 0;
     	box-sizing: border-box;
@@ -72,6 +72,7 @@
         width: fit-content;
         height: 194px;
         text-align: center;
+        margin: auto;
 
         .monitor{
             width: 275px;
